--- a/views/header.ejs
+++ b/views/header.ejs
@@ -91,20 +91,20 @@ $(document).ready(function() {
 					</div>
 				</a>
 				<div class="dropdown-menu dropdown-menu-right">
-					<form class="px-4 py-3">
+					<form class="px-4 py-3" action="/login" method="POST" >
 						<div class="form-group">
 						  <label>Email address</label>
-						  <input type="email" class="form-control" placeholder="email@example.com">
+						  <input type="email" name="email" class="form-control" placeholder="email@example.com">
 						</div>
 						<div class="form-group">
 						  <label>Password</label>
-						  <input type="password" class="form-control" placeholder="Password">
+						  <input type="password" name="passwd" class="form-control" placeholder="Password">
 						</div>
 						<button type="submit" class="btn btn-primary">Sign in</button>
-						</form>
-						<hr class="dropdown-divider">
-						<a class="dropdown-item" href="#">Have account? Sign up</a>
-						<a class="dropdown-item" href="#">Forgot password?</a>
+					</form>
+					<hr class="dropdown-divider">
+					<a class="dropdown-item" href="#">Have account? Sign up</a>
+					<a class="dropdown-item" href="#">Forgot password?</a>
 				</div> <!--  dropdown-menu .// -->
 			</div> <!-- widget  dropdown.// -->
 		</div>	<!-- widgets-wrap.// -->	
