--- a/views/header.ejs
+++ b/views/header.ejs
@@ -82,12 +82,13 @@ $(document).ready(function() {
 					</div>
 				</a>
 			</div> <!-- widget .// -->
+			<%= JSON.stringify(user) %> 
 			<div class="widget-header dropdown">
 				<a href="#" class="ml-3 icontext" data-toggle="dropdown" data-offset="20,10">
 					<div class="icon-wrap icon-xs bg2 round text-secondary"><i class="fa fa-user"></i></div>
 					<div class="text-wrap">
 						<small>Hello.</small>
-						<span>Login <i class="fa fa-caret-down"></i></span>
+						<span> <%= user %>  <i class="fa fa-caret-down"></i></span>
 					</div>
 				</a>
 				<div class="dropdown-menu dropdown-menu-right">
